tests/rosetta/out/Haskell/bitmap-histogram.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/bitmap-histogram.hs:158:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/bitmap-histogram.hs:150:1
                 /workspace/mochi/tests/rosetta/out/Haskell/bitmap-histogram.hs:158:1
    |
158 | main = do
    | ^^^^
